Fixed key issue. Login button is visible again. Now using a key that will only work from the deployment URL.

--- a/src/assets/css/mainPage.css
+++ b/src/assets/css/mainPage.css
@@ -1,5 +1,6 @@
 .loginButton{
     position:absolute;
+    z-index: 10;
     top: 18px;
     right:0;
 }
